# llm-kernel-profiler

./: .gitignore  LICENSE  README.md  llm-kernel-lab.toml  pyproject.toml
.github/workflows/: ci.yml
csrc/: CMakeLists.txt
csrc/bindings/: pybind_module.cpp
csrc/include/llm_kernel_lab/: benchmark.h  timing.h
csrc/src/: benchmark.cpp  timing.cu
docs/: API_REFERENCE.md  GETTING_STARTED.md  LLM_KERNELS.md
examples/: attention_comparison.py  basic_benchmark.py  real_world_test.py
src/llm_kernel_lab/: __init__.py  config.py  hardware.py  model.py  serialization.py
src/llm_kernel_lab/bench/: __init__.py  cuda_backend.py  pytorch_backend.py  runner.py  triton_backend.py
src/llm_kernel_lab/cli/: __init__.py  bench_cmd.py  ci_cmd.py  compare_cmd.py  hw_cmd.py  init_cmd.py  list_cmd.py  main.py  report_cmd.py
src/llm_kernel_lab/profiler/: __init__.py  metrics.py  nsight.py  profiler.py  timing.py
src/llm_kernel_lab/report/: __init__.py  bottleneck.py  recommendations.py  renderer.py  roofline.py
src/llm_kernel_lab/storage/: __init__.py  json_store.py  sqlite_store.py
tests/: test_bottleneck.py  test_ci.py  test_cli.py  test_config.py  test_json_store.py  test_metrics.py  test_model.py  test_nsight_parser.py  test_recommendations.py  test_roofline.py  test_serialization.py
website/: config.toml
website/content/posts/: benchmark-results.md
website/static/css/: style.css
website/themes/llm-kernel-lab/: theme.toml
website/themes/llm-kernel-lab/layouts/: index.html
website/themes/llm-kernel-lab/layouts/_default/: list.html  single.html
website/themes/llm-kernel-lab/layouts/partials/: footer.html  head.html  header.html
