[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-kernel-lab"
version = "0.1.0"
description = "Profiling and optimization toolkit for GPU kernels used in LLM inference"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "LLM Kernel Lab Contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Benchmark",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
triton = ["triton>=2.1"]
all = ["torch>=2.0", "triton>=2.1", "plotly>=5.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
llm-kernel-lab = "llm_kernel_lab.cli.main:cli"

[project.urls]
Homepage = "https://github.com/llm-kernel-lab/llm-kernel-lab"
Repository = "https://github.com/llm-kernel-lab/llm-kernel-lab"
Issues = "https://github.com/llm-kernel-lab/llm-kernel-lab/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
